[package]
name = "code-dup-detect"
version = "0.1.0"
authors = ["Przemek <extremegf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.1"
clap = "2.33.0"
rust-embed = "5.1.0"
handlebars = "3.0.0-beta.1"
serde_json = "1.0.41"

[dev-dependencies]
pretty_assertions = "0.6.1"
